--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -7,5 +7,6 @@
 </head>
 <body>
     Init html.
+    Fix iis53.
 </body>
 </html>
