--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title></title>
 </head>
 <body>
-    1.Init html. 
-    2.Fix hotfix. 
-    3.Fix iis53. 
-    4.Continue fix iss53. 
+    Init html.
 </body>
 </html>
