--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> 
     1.Init html. 
     2.Fix hotfix. 
-    3.Init html. Fix iss53. 
+    3.Fix iss53. 
     4.Continue fix iss53. 
 </body>
 </html>
